added what the npc uses

--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
                 return "Draw!"
             }
             else if (playerSelection === "rock" && ComputerSelection === "scissors") {
-                return "You Win!"
+                return "CPU picked scissors. You Win!"
             }
             else if (playerSelection === "paper" && ComputerSelection === "rock") {
-                return "You Win!"
+                return "CPU picked rock. You Win!"
             }
             else if (playerSelection === "scissors" && ComputerSelection === "paper") {
-                return "You Win!"
+                return "CPU picked paper. You Win!"
             }
             else if (playerSelection === "scissors" && ComputerSelection === "rock"){
-                return "You Lose!"
+                return "CPU picked rock. You Lose!"
             }
             else if (playerSelection === "paper" && ComputerSelection === "scissors"){
-                return "You Lose!"
+                return "CPU picked scissors. You Lose!"
             }
             else if (playerSelection === "rock" && ComputerSelection === "paper"){
-                return "You Lose!"
+                return "CPU picked paper. You Lose!"
             }
         }
 
